Opened 19 years ago

Closed 19 years ago

Last modified 19 years ago

#314 closed bug (fixed)

BeIDE crashes due to bugs in BMessage

Reported by: johndrinkwater Owned by: mmlr
Priority: normal Milestone: R1
Component: - General Version:
Keywords: Cc: diver
Blocked By: Blocking:
Platform: All

Description

Open BeIDE, menu edit -> preferences, select "Key Bindings" from the list, BeIDE crashes.

Some debug output

0x0083ea47 in memmove () from /boot/beos/system/lib/libroot.so (gdb) bt #0 0x0083ea47 in memmove () from /boot/beos/system/lib/libroot.so #1 0x00694d61 in BMessage::_ResizeData () from /boot/beos/system/lib/libbe.so #2 0x006956cf in BMessage::ReplaceData () from /boot/beos/system/lib/libbe.so #3 0x006983cf in BMessage::ReplaceData () from /boot/beos/system/lib/libbe.so #4 0x0030fd52 in IDEApp::GetData () #5 0x002988f2 in MEnvironmentPreferencesWindow::GetTargetData () #6 0x00297d79 in MPreferencesWindow::GetDataForCurrentView () #7 0x00296e47 in MPreferencesWindow::ChangeView () #8 0x002968f6 in MPreferencesWindow::MessageReceived () #9 0x0068f4a3 in BLooper::DispatchMessage ()

from /boot/beos/system/lib/libbe.so

#10 0x00709c71 in BWindow::DispatchMessage ()

from /boot/beos/system/lib/libbe.so

#11 0x0070ccac in BWindow::task_looper () from /boot/beos/system/lib/libbe.so #12 0x006909cf in BLooper::_task0_ () from /boot/beos/system/lib/libbe.so #13 0x007f0860 in thread_entry () from /boot/beos/system/lib/libroot.so #14 0x70080fec in ?? () (gdb)

This came out in Terminal

BeIDE: src/system/libroot/posix/malloc/threadheap.cpp:68:void *

BPrivate::threadHeap::malloc(long unsigned int): _pHeap

Change History (7)

comment:1 by axeld, 19 years ago

Owner: changed from axeld to mmlr

comment:2 by mmlr, 19 years ago

* Bug 421 has been marked as a duplicate of this bug. *

comment:3 by mmlr, 19 years ago

Cc: diver added

comment:4 by mmlr, 19 years ago

Fixed in hrev17101.

comment:5 by mmlr, 19 years ago

Status: newclosed

comment:6 by mmlr, 19 years ago

Resolution: fixed

comment:7 by johndrinkwater, 19 years ago

Confirmed as fixed.

Note: See TracTickets for help on using tickets.